# OpenGL_Study

./: .gitignore  CMakeLists.txt  LICENSE
1.Window/: CMakeLists.txt
1.Window/src/: main.cpp
10.Basic_Lighting/: CMakeLists.txt
10.Basic_Lighting/shaders/: FragmentShader.fs
10.Basic_Lighting/src/: VertexArray.cpp  VertexBufferLayout.cpp  main.cpp
11.Material/: CMakeLists.txt
11.Material/shaders/: FragmentShader.fs  VertexShader.vert
11.Material/src/: main.cpp
12.Lighting_maps/: CMakeLists.txt
12.Lighting_maps/shaders/: FragmentShader.frag
12.Lighting_maps/src/: Shader.cpp  main.cpp
13.1.Light_Casters_Directional_Light/: CMakeLists.txt
13.1.Light_Casters_Directional_Light/include/: VertexBuffer.h
13.1.Light_Casters_Directional_Light/shaders/: FragmentShader.fs  VertexShader.vert
13.1.Light_Casters_Directional_Light/src/: main.cpp
13.2.Light_Casters_Point_Light/: CMakeLists.txt
13.2.Light_Casters_Point_Light/include/: Camera.h  Shader.h
13.2.Light_Casters_Point_Light/shaders/: FragmentShader.fs
13.2.Light_Casters_Point_Light/src/: main.cpp
13.3.Light_Casters_Spotlight/: CMakeLists.txt
13.3.Light_Casters_Spotlight/include/: VertexBufferLayout.h
13.3.Light_Casters_Spotlight/shaders/: FragmentShader.fs
13.3.Light_Casters_Spotlight/src/: VertexBuffer.cpp  main.cpp
14.Multiple_Lights/: CMakeLists.txt
14.Multiple_Lights/shaders/: FragmentShader.fs
14.Multiple_Lights/src/: main.cpp
15.Mesh/: CMakeLists.txt
15.Mesh/include/: Mesh.h  Model.h
15.Mesh/src/: Mesh.cpp  Model.cpp  main.cpp
16.Depth_Testing/: CMakeLists.txt
16.Depth_Testing/include/: VertexArray.h
16.Depth_Testing/shaders/: Depth_Testing.frag
16.Depth_Testing/src/: Camera.cpp  main.cpp
17.Stencil_Testing/: CMakeLists.txt
17.Stencil_Testing/include/: Texture.h
17.Stencil_Testing/src/: main.cpp
18.FrameBuffers/: CMakeLists.txt
18.FrameBuffers/include/: FrameBuffer.h
18.FrameBuffers/src/: FrameBuffer.cpp  main.cpp
2.Triangle/: CMakeLists.txt
3.Uniform/: CMakeLists.txt
3.Uniform/src/: main.cpp
4.Shader/: CMakeLists.txt
4.Shader/src/: Shader.cpp  main.cpp
5.Texture/: CMakeLists.txt
5.Texture/include/: Shader.h
5.Texture/shaders/: VertexShader.vert
5.Texture/src/: main.cpp
6.Transformation/: CMakeLists.txt
6.Transformation/include/: Shader.h
6.Transformation/shaders/: FragmentShader.frag  VertexShader.vert
6.Transformation/src/: main.cpp
7.Coordinate_System/: CMakeLists.txt
7.Coordinate_System/src/: main.cpp
8.Camera/: CMakeLists.txt
8.Camera/include/: Camera.h
8.Camera/shaders/: FragmentShader.frag  VertexShader.vs
8.Camera/src/: Camera.cpp  main.cpp
9.Color/: CMakeLists.txt
9.Color/src/: Texture.cpp  main.cpp
Triangle/: CMakeLists.txt
Triangle/src/: main.cpp
Window/: CMakeLists.txt
Window/src/: glad.c
