cmake_minimum_required(VERSION 3.10)

project(OpenGL_Study)

add_subdirectory(1.Window)
add_subdirectory(2.Triangle)
add_subdirectory(3.Uniform)
add_subdirectory(4.Shader)
add_subdirectory(5.Texture)
add_subdirectory(6.Transformation)
add_subdirectory(7.Coordinate_System)
add_subdirectory(8.Camera)
add_subdirectory(9.Color)
add_subdirectory(10.Basic_Lighting)
add_subdirectory(11.Material)
add_subdirectory(12.Lighting_maps)